--- a/ruoyi-admin/src/main/resources/application.yml
+++ b/ruoyi-admin/src/main/resources/application.yml
@@ -88,12 +88,24 @@ token:
   
 # MyBatis配置
 mybatis:
-    # 搜索指定包别名
-    typeAliasesPackage: com.ruoyi.**.domain
-    # 配置mapper的扫描，找到所有的mapper.xml映射文件
-    mapperLocations: classpath*:mapper/**/*Mapper.xml
-    # 加载全局的配置文件
-    configLocation: classpath:mybatis/mybatis-config.xml
+  # 搜索指定包别名
+  typeAliasesPackage: com.ruoyi.**.domain
+  # 配置mapper的扫描，找到所有的mapper.xml映射文件
+  mapperLocations: classpath*:mapper/**/*Mapper.xml
+  # 加载全局的配置文件
+  configLocation: classpath:mybatis/mybatis-config.xml
+
+# mybatis配置
+mybatis-plus:
+  mapper-locations: classpath*:mapper/**/*.xml
+  type-aliases-package: com.ruoyi
+  global-config:
+    db-config:
+      id-type: auto
+      field-strategy: not_null
+      logic-delete-field: delFlag
+      logic-delete-value: 1
+      logic-not-delete-value: 0
 
 # PageHelper分页插件
 pagehelper: 
@@ -117,3 +129,15 @@ xss:
   excludes: /system/notice/*
   # 匹配链接
   urlPatterns: /system/*,/monitor/*,/tool/*
+
+# mybatis配置
+#mybatis-plus:
+#  # 自定义TypeHandler
+#  type-handlers-package: com.ruoyi.framework.config.typehandler
+#  mapper-locations: classpath*:mapper/**/*.xml
+#  type-aliases-package: com.ruoyi.**.domain
+#  global-config:
+#    #是否控制台
+#    banner: false
+#    db-config:
+#      id-type: auto
