--- a/ruoyi-system/pom.xml
+++ b/ruoyi-system/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>default-app</artifactId>
-        <groupId>com.gy</groupId>
+        <groupId>com.ruoyi</groupId>
         <version>3.1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -19,7 +19,7 @@
 
         <!-- 通用工具-->
         <dependency>
-            <groupId>com.gy</groupId>
+            <groupId>com.ruoyi</groupId>
             <artifactId>ruoyi-common</artifactId>
         </dependency>
 
