--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
     <groupId>com.ruoyi</groupId>
-    <artifactId>default-app</artifactId>
+    <artifactId>ruoyi-vue-gl</artifactId>
     <version>3.1.0</version>
 
-    <name>default-app</name>
-    <description>default-app</description>
+<!--    <name>ruoyi-vue-gl</name>-->
+<!--    <description>ruoyi-vue-gl</description>-->
 
     <properties>
         <ruoyi.version>3.1.0</ruoyi.version>
