--- a/ruoyi-admin/pom.xml
+++ b/ruoyi-admin/pom.xml
@@ -95,6 +95,11 @@
             <version>1.4</version>
         </dependency>
 
+        <dependency>
+            <groupId>net.sf.ehcache</groupId>
+            <artifactId>ehcache</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
