--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     <version>3.1.0</version>
 
 <!--    <name>ruoyi-vue-gl</name>-->
-<!--    <description>ruoyi-vue-gl</description>-->
+    <description>用于乡村振兴项目</description>
 
     <properties>
         <ruoyi.version>3.1.0</ruoyi.version>
